# cloud-engineer-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  AWS-EXTRAS.md  DEMO.md  FAQ.md  PLUGINS.md  REMOTE-MCP.md
examples/: claude-desktop-config.json  cursor-config.json
examples/plugin-flyio/: README.md  pyproject.toml
examples/plugin-flyio/src/cloud_engineer_mcp_flyio/: __init__.py
scripts/: benchmark_selector.py  dev.sh
src/cloud_engineer_mcp/: __init__.py  __main__.py  _demo_backend.py  auth.py  cli.py  config.py  discovery.py  errors.py  installer.py  plugins.py  policy.py  server.py
src/cloud_engineer_mcp/backends/: manager.py  process.py  registry.py
src/cloud_engineer_mcp/eval/: __init__.py  catalog.py  dataset.yml  runner.py
src/cloud_engineer_mcp/observability/: health.py  logging.py  metrics.py  tracing.py
src/cloud_engineer_mcp/selector/: backend.py  bm25.py  context.py  engine.py  index.py
src/cloud_engineer_mcp/session/: sessions.py
src/cloud_engineer_mcp/transport/: http.py  stdio.py
tests/: conftest.py
tests/fixtures/: mock_backend.py  sample_tools.json
tests/integration/: test_backend_lifecycle.py  test_end_to_end.py  test_http_transport.py  test_tool_routing.py
tests/unit/: test_auth.py  test_backoff.py  test_bm25.py  test_config.py  test_context.py  test_discovery.py  test_eval.py  test_metrics.py  test_plugins.py  test_policy.py  test_registry.py  test_remote_mcp.py  test_selector.py  test_session.py  test_streaming.py  test_tracing.py
